--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,10 @@
-<header class="site-header">
+<header class="site-header" style="background-image: url({{ site.cover }})">
 
   <div class="wrapper">
 
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+    <a class="site-title" href="{{ site.baseurl }}/">
+        {{ site.title }}
+    </a>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
