--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,8 +2,6 @@
  * Site header
  */
 .site-header {
-    border-top: 5px solid $grey-color-dark;
-    border-bottom: 1px solid $grey-color-light;
     min-height: 56px;
 
     // Positioning context for the mobile navigation icon
@@ -11,11 +9,11 @@
 }
 
 .site-title {
-    font-size: 26px;
+    font-size: 34px;
     line-height: 56px;
     letter-spacing: -1px;
     margin-bottom: 0;
-    float: left;
+    float: center;
 
     &,
     &:visited {
@@ -24,7 +22,7 @@
 }
 
 .site-nav {
-    float: right;
+    float: center;
     line-height: 56px;
 
     .menu-icon {
