--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,5 @@
-<header class="site-header" style="background-image: url({{ site.cover }})">
+<header class="site-header" style="height: 350px; background-image: url({{ site.cover | prepend: site.baseurl }})"
+data-stellar-background-ratio="0.5" data-stellar-horizontal-offset="50">
 
   <div class="wrapper">
 
