--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,5 @@
-<footer class="site-footer">
+<footer class="site-footer" style="background-image: url({{ site.cover | prepend: site.baseurl }})"
+data-stellar-background-ratio="0.5" data-stellar-horizontal-offset="50">
 
   <div class="wrapper">
 
