--- a/_layouts/doc.html
+++ b/_layouts/doc.html
@@ -9,6 +9,9 @@
 
     <div class="page-content">
       <div class="wrapper">
+        <div class="edit-message">
+          Want to change something? Click <a href="{{ page.url | split: '/' | last | prepend: site.docurl }}.md">here</a> to edit.
+        </div>
         {{ content }}
       </div>
     </div>
