Test site with editable docs now running

--- a/css/main.css
+++ b/css/main.css
@@ -107,6 +107,12 @@ pre {
     padding-left: 0; }
 
 /**
+ * Message
+ */
+.edit-message {
+  font-size: 12px; }
+
+/**
  * Wrapper
  */
 .wrapper {
