--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -204,7 +204,7 @@ pre {
         vertical-align: middle;
 
         path {
-            fill: $grey-color;
+            fill: $front-color;
         }
     }
 }
