--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,10 +17,8 @@ data-stellar-background-ratio="0.5" data-stellar-horizontal-offset="50">
       </a>
 
       <div class="trigger">
-        {% for page in site.pages %}
-          {% if page.title %}
+        {% for page in site.menu %}
           <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
-          {% endif %}
         {% endfor %}
       </div>
     </nav>
