--- a/css/main.scss
+++ b/css/main.scss
@@ -13,7 +13,7 @@ $base-line-height: 1.5;
 
 $spacing-unit:     30px;
 
-$title-color:      #FFFFFF;
+$front-color:      #EEEEEE;  // This is the color to contrast with background img
 $text-color:       #111;
 $background-color: #fdfdfd;
 $brand-color:      #30AC59;
